rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_1997_DirectoryOperationalBindingManagementProtocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_1997_DirectoryOperationalBindingManagementProtocol.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to resolve supertype ROS of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod directory_operational_binding_management_protocol {
    extern crate alloc;
    use super::directory_abstract_service::{DIRECTORY_BIND, DIRECTORY_UNBIND};
    use super::directory_security_exchanges::DIR2OR3SE;
    use super::operational_binding_management::{
        D_SAOPERATIONAL_BINDING_MANAGEMENT_BIND, D_SAOPERATIONAL_BINDING_MANAGEMENT_UNBIND,
        ESTABLISH_OPERATIONAL_BINDING, MODIFY_OPERATIONAL_BINDING, TERMINATE_OPERATIONAL_BINDING,
    };
    use super::protocol_object_identifiers::{
        ID_AC_DIRECTORY_OPERATIONAL_BINDING_MANAGEMENT_AC,
        ID_AC_DIRECTORY_OPERATIONAL_BINDING_MANAGEMENT_WITH2OR3SE_AC,
        ID_AS_DIRECTORY_OPERATIONAL_BINDING_MANAGEMENT_AS, ID_CONTRACT_DOP,
        ID_PACKAGE_DOP_CONNECTION, ID_PACKAGE_OPERATIONAL_BINDING_MANAGEMENT,
        ID_ROS_OBJECT_DOP_DSA,
    };
    use super::remote_operations_abstract_syntaxes::ACSE_ABSTRACT_SYNTAX;
    use super::remote_operations_generic_ros_pdus::*;
    use super::remote_operations_information_objects::*;
    use super::remote_operations_information_objects_extensions::*;
    use super::remote_operations_realizations::{ACSE, P_DATA};
    use super::useful_definitions::{
        DIRECTORY_ABSTRACT_SERVICE, OP_BINDING_MANAGEMENT, PROTOCOL_OBJECT_IDENTIFIERS,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "DOP-InvokeIDSet")]
    pub struct DOPInvokeIDSet(pub InvokeId);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "DOP-PDUs")]
    pub enum DOPPDUs {
        #[rasn(value("0.."))]
        basicRos(ROS),
        #[rasn(value("0.."))]
        bind(Bind),
        #[rasn(value("0.."))]
        unbind(Unbind),
    }
    #[doc = " remote error codes"]
    pub static ID_ERR_OPERATIONAL_BINDING_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(100))));
    #[doc = " remote operation codes"]
    pub static ID_OP_ESTABLISH_OPERATIONAL_BINDING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(100))));
    pub static ID_OP_MODIFY_OPERATIONAL_BINDING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(102))));
    pub static ID_OP_TERMINATE_OPERATIONAL_BINDING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(101))));
}
