rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_1997_DirectorySystemProtocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_1997_DirectorySystemProtocol.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to resolve supertype ROS of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve reference in object set.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod directory_system_protocol {
    extern crate alloc;
    use super::directory_security_exchanges::DIR2OR3SE;
    use super::distributed_operations::{
        CHAINED_ABANDON, CHAINED_ADD_ENTRY, CHAINED_COMPARE, CHAINED_LIST, CHAINED_MODIFY_DN,
        CHAINED_MODIFY_ENTRY, CHAINED_READ, CHAINED_REMOVE_ENTRY, CHAINED_SEARCH, D_SABIND,
        D_SAUNBIND,
    };
    use super::protocol_object_identifiers::{
        ID_AC_DIRECTORY_SYSTEM_AC, ID_AC_DIRECTORY_SYSTEM_WITH2OR3SE_AC, ID_AS_DIRECTORY_SYSTEM_AS,
        ID_CONTRACT_DSP, ID_PACKAGE_CHAINED_MODIFY, ID_PACKAGE_CHAINED_READ,
        ID_PACKAGE_CHAINED_SEARCH, ID_PACKAGE_DSP_CONNECTION, ID_ROS_OBJECT_DSP_DSA,
    };
    use super::remote_operations_abstract_syntaxes::ACSE_ABSTRACT_SYNTAX;
    use super::remote_operations_generic_ros_pdus::*;
    use super::remote_operations_information_objects::*;
    use super::remote_operations_information_objects_extensions::*;
    use super::remote_operations_realizations::{ACSE, P_DATA};
    use super::useful_definitions::{
        DIRECTORY_SECURITY_EXCHANGES, DISTRIBUTED_OPERATIONS, PROTOCOL_OBJECT_IDENTIFIERS,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "DSP-InvokeIDSet")]
    pub struct DSPInvokeIDSet(pub InvokeId);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "DSP-PDUs")]
    pub enum DSPPDUs {
        #[rasn(value("0.."))]
        basicRos(ROS),
        #[rasn(value("0.."))]
        bind(Bind),
        #[rasn(value("0.."))]
        unbind(Unbind),
    }
}
